--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">SimplePlayer</string>
     <string name="play">Play</string>
-    <string name="pause">Pause</string>
+    <string name="pause">| |</string>
+    <string name="previous"><![CDATA[<<]]></string>
+    <string name="next"><![CDATA[>>]]></string>
 </resources>
